--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/question_text"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="@string/question_australia"/>
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -49,5 +49,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/true_button"
         app:layout_constraintTop_toTopOf="@+id/true_button"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/next_button"
+        app:layout_constraintEnd_toEndOf="@+id/false_button"
+        app:layout_constraintStart_toStartOf="@+id/true_button"
+        app:layout_constraintTop_toBottomOf="@+id/true_button"/>
 
 </android.support.constraint.ConstraintLayout>
