--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.imeepwni.geoquiz.view.QuizActivity">
@@ -19,9 +19,9 @@
         tools:text="@string/question_australia"/>
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
 
@@ -29,13 +29,14 @@
         android:id="@+id/true_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:onClick="showResult"
         android:text="@string/true_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toStartOf="@+id/false_button"
-        android:layout_marginEnd="0dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline"/>
 
     <Button
         android:id="@+id/false_button"
@@ -44,6 +45,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="0dp"
+        android:onClick="showResult"
         android:text="@string/false_button"
         app:layout_constraintBottom_toBottomOf="@+id/true_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,15 +53,17 @@
         app:layout_constraintTop_toTopOf="@+id/true_button"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/next_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
+        android:onClick="nextQuestion"
         android:text="@string/next_button"
         app:layout_constraintEnd_toEndOf="@+id/false_button"
         app:layout_constraintStart_toStartOf="@+id/true_button"
         app:layout_constraintTop_toBottomOf="@+id/true_button"/>
 
 </android.support.constraint.ConstraintLayout>
+
