--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -53,26 +53,28 @@
         app:layout_constraintStart_toEndOf="@+id/true_button"
         app:layout_constraintTop_toTopOf="@+id/true_button"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:contentDescription="@string/next"
         android:onClick="nextQuestion"
-        android:text="@string/next_button"
+        android:src="@drawable/arrow_right"
+        app:layout_constraintBottom_toBottomOf="@+id/prev_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/prev_button"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/prev_button"
         app:layout_constraintTop_toTopOf="@+id/prev_button"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/prev_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/prev"
         android:onClick="prevQuestion"
-        android:text="@string/prev_button"
+        android:src="@drawable/arrow_left"
         app:layout_constraintEnd_toStartOf="@+id/next_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/true_button"/>
